syntax = "proto3";

package calculator;

option go_package = "github.com/hiosi123/gRPC/calculator/proto";

message PrimeRequest {
    int32 prime_number = 1;
} 

message PrimeResponse {
    int32 result = 1;
}